Redefinição das tabelas do banco

--- a/SAPRON-backend/userCalendar/templates/controle.html
+++ b/SAPRON-backend/userCalendar/templates/controle.html
@@ -11,6 +11,7 @@
     <body>
         <div>
             <ul class="task-list">
+                <h2>Locação</h2>
                 {% for controle in controles %}
                     <li>
                         {{ controle.checkin.hora_checkin }}
